----------
v4.2.5-git
----------



------
v4.2.4
------

[jan] Don't list task lists without SHOW permissions (Bug #13837).
[jan] Use consistent checkbox.
[jan] Don't allow deletion of tasks with sub-tasks (Bug #13809).
[jan] Don't allow completion of tasks with incomplete sub-tasks and vice versa.
[jan] Don't wipe out whole task lists when PUTing individual tasks via WebDAV.


------
v4.2.3
------

[mjr] Fix issue with initially creating nag_shares table.


------
v4.2.2
------

[jan] Export nicer display names for users and resources via WebDAV.
[jan] Export custom owner and read-only properties via WebDAV.
[jan] Fix search attribute of SQL shares on Oracle.
[mjr] Fix adding a new tasklist to the syncronized tasklists (Bug #13642).
[jan] Pass current start date of recurring tasks to dynamic interface.
[jan] Fix setting task list name for external tasks.
[jan] Fix link to create sub-task from a task view.
[jan] Fix listing of recurring tasks with start dates.
[mjr] Add missing categories to EAS tasks.
[jan] Fix sidebar display of system task lists in basic view.
[jan] Fix retrieving individual tasks via WebDAV.


------
v4.2.1
------

[jan] Don't include external tasks with WebDAV task list.
[jan] Fix displayed CalDAV URLs for shared task lists (Bug #12380).
[mjr] Fix remembering auto determined default share (Bug #13360).
[mjr] Add EAS client created shares to the sync_lists preference (Bug #13359).
[mjr] Add missing API support for searchTags API (Bug #13364).
[mjr] Fix detecting task completion when sending task change notifications
      (Alfonso Marín Marín <almarin@um.es>, Bug #13350).


------
v4.2.0
------

[mjr] Fix returning to previously selected tab after task is saved (Bug
      #13308).
[mjr] Fix fatal error when saving a task, only one tasklist exists, and at
      least one SmartList exists.


-----------
v4.2.0beta2
-----------

[jan] Always display system task lists to administrators.