@@ -2,6 +2,9 @@
 v4.2.5-git
 ----------
 
+[jan] Don't delete existing completions when editing a recurring task.
+[jan] Only delete the last completion when toggling a recurring task to
+      incomplete.
 
 
 ------
